recipes/0-hello-openshift-pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: hello-openshift-pod
spec:
  containers:
  - name: hello-openshift-container
    image: openshift/hello-openshift:latest
    imagePullPolicy: IfNotPresent
