recipes/1-hello-openshift-pod.yaml
kind: Pod
apiVersion: v1beta2
id: hello-openshift-pod
desiredState:
  manifest:
    id: hello-openshift-manifest
    version: v1beta1
    containers:
    - name: hello-openshift
      image: openshift/hello-openshift
      ports:
      - containerPort: 8080
        hostPort: 6061
labels:
  name: hello-openshift
