recipes/3-sinatra.yaml
kind: List
apiVersion: v1beta1
creationTimestamp: null
items:
- kind: Service
  apiVersion: v1beta1
  id: simple-openshift-sinatra
  containerPort: 8080
  creationTimestamp: null
  port: 8080
  portName: simple-openshift-sinatra-sti-tcp-8080
  ports:
  - name: simple-openshift-sinatra-sti-tcp-8080
    containerPort: 8080
    port: 8080
    protocol: TCP
  protocol: TCP
  selector:
    deploymentconfig: simple-openshift-sinatra-sti
- kind: ImageStream
  apiVersion: v1beta1
  metadata:
    name: simple-openshift-sinatra-sti
    creationTimestamp: null
  spec: {}
  status:
    dockerImageRepository: ''
- kind: BuildConfig
  apiVersion: v1beta1
  metadata:
    name: simple-openshift-sinatra-sti
    creationTimestamp: null
  triggers:
  - type: github
    github:
      secret: 02KHZmbpYirm3V2ts7b3
  - type: generic
    generic:
      secret: F4EJelGXbVRefyXHU4Hf
  parameters:
    strategy:
      type: STI
      stiStrategy:
        builderImage: registry.access.redhat.com/openshift3_beta/ruby-20-rhel7
        clean: true
        image: registry.access.redhat.com/openshift3_beta/ruby-20-rhel7
    source:
      type: Git
      git:
        uri: http://192.168.0.254/export/simple-openshift-sinatra-sti.git
    output:
      to:
        name: simple-openshift-sinatra-sti
- kind: DeploymentConfig
  apiVersion: v1beta1
  metadata:
    name: simple-openshift-sinatra-sti
    creationTimestamp: null
  triggers:
  - type: ConfigChange
  - type: ImageChange
    imageChangeParams:
      automatic: true
      containerNames:
      - simple-openshift-sinatra-sti
      from:
        name: simple-openshift-sinatra-sti
      lastTriggeredImage: ''
      tag: latest
  template:
    strategy:
      type: Recreate
    controllerTemplate:
      podTemplate:
        desiredState:
          manifest:
            id: ''
            version: v1beta2
            containers:
            - name: simple-openshift-sinatra-sti
              capabilities: {}
              image: library/simple-openshift-sinatra-sti:latest
              imagePullPolicy: ''
              ports:
              - name: simple-openshift-sinatra-sti-tcp-8080
                containerPort: 8080
                protocol: TCP
              resources: {}
            restartPolicy: {}
            volumes: null
        labels:
          deploymentconfig: simple-openshift-sinatra-sti
      replicaSelector:
        deploymentconfig: simple-openshift-sinatra-sti
      replicas: 1
