recipes/1-hello-openshift-full-rc.yaml
kind: List
apiVersion: v1
items:
- kind: ReplicationController
  apiVersion: v1
  metadata:
    name: hello-openshift-rc
  spec:
    replicas: 1
    selector:
      name: hello-openshift-pod
    template:
      metadata:
        labels:
          name: hello-openshift-pod
      spec:
        containers:
        - name: hello-openshift-container
          image: openshift/hello-openshift:v0.4.2

- kind: Service
  apiVersion: v1
  metadata:
    name: hello-openshift-service
  spec:
    ports:
    - port: 8080
    selector:
      name: hello-openshift-pod

- kind: Route
  apiVersion: v1
  metadata:
    name: hello-openshift-route
  spec:
    host: hello-openshift.cloudapps.example.com
    to:
      kind: Service
      name: hello-openshift-service
