recipes/5-integrated-template.yaml
kind: Template
apiVersion: v1beta1
metadata:
  name: integrated
parameters:
- name: MYSQL_DATABASE
  value: root
- name: MYSQL_ROOT_PASSWORD
  from: '[a-zA-Z0-9]{8}'
  generate: expression
items:
- kind: ImageRepository
  apiVersion: v1beta1
  metadata:
    name: webapp-image
- kind: BuildConfig
  apiVersion: v1beta1
  metadata:
    name: webapp-build
  parameters:
    strategy:
      type: STI
      stiStrategy:
        image: registry.access.redhat.com/openshift3_beta/ruby-20-rhel7
    source:
      type: Git
      git:
        uri: git://github.com/openshift/ruby-hello-world.git
    output:
      to:
        name: webapp-image
- kind: DeploymentConfig
  apiVersion: v1beta1
  metadata:
    name: webapp-dc
  triggers:
  - type: ConfigChange
  - type: ImageChange
    imageChangeParams:
      automatic: true
      containerNames:
      - webapp
      from:
        name: webapp-image
      tag: latest
  template:
    strategy:
      type: Recreate
    controllerTemplate:
      podTemplate:
        desiredState:
          manifest:
            version: v1beta1
            containers:
            - name: webapp
              image: webapp-image
              ports:
              - containerPort: 8080
        labels:
          name: webapp-pod
      replicaSelector:
        name: webapp-pod
      replicas: 1
- kind: Service
  apiVersion: v1beta1
  id: webapp-service
  port: 8080
  selector:
    name: webapp-pod
- kind: DeploymentConfig
  apiVersion: v1beta1
  metadata:
    name: database-dc
  triggers:
  - type: ConfigChange
  template:
    strategy:
      type: Recreate
    controllerTemplate:
      podTemplate:
        desiredState:
          manifest:
            version: v1beta1
            containers:
            - name: database
              image: mysql
              ports:
              - containerPort: 3306
        labels:
          name: database-pod
      replicaSelector:
        name: database-pod
      replicas: 1
- kind: Service
  apiVersion: v1beta1
  id: database
  port: 3306
  selector:
    name: database-pod
- kind: Route
  apiVersion: v1beta1
  metadata:
    name: webapp-route
  host: integrated.cloudapps.example.com
  serviceName: webapp-service
