recipes/5-jee-template.yaml
kind: Template
apiVersion: v1beta1
metadata:
  name: jee
parameters:
- name: MYSQL_USER
  description: administrator username
  value: mysql
- name: MYSQL_PASSWORD
  description: administrator password
  value: mysql
- name: MYSQL_ROOT_PASSWORD
  description: database password
  value: supersecret
- name: MYSQL_DATABASE
  description: database name
  value: sample
items:
- kind: Service
  apiVersion: v1beta1
  id: frontend
  containerPort: 8080
  port: 8080
  selector:
    name: frontend
- kind: ImageRepository
  apiVersion: v1beta1
  metadata:
    name: origin-jee-sample
- kind: ImageRepository
  apiVersion: v1beta1
  metadata:
    name: wildfly-8-centos
- kind: BuildConfig
  apiVersion: v1beta1
  metadata:
    name: jee-sample-build
  triggers:
  - type: imageChange
    imageChange:
      from:
        name: wildfly-8-centos
      image: openshift/wildfly-8-centos
      tag: latest
  parameters:
    strategy:
      type: STI
      stiStrategy:
        image: openshift/wildfly-8-centos
    source:
      type: Git
      git:
        uri: git://github.com/bparees/javaee7-hol.git
    output:
      to:
        name: origin-jee-sample
  labels:
    name: jee-sample-build
- kind: DeploymentConfig
  apiVersion: v1beta1
  metadata:
    name: frontend
  triggers:
  - type: ImageChange
    imageChangeParams:
      automatic: true
      containerNames:
      - jee-sample
      from:
        name: origin-jee-sample
      tag: latest
  template:
    strategy:
      type: Recreate
    controllerTemplate:
      podTemplate:
        desiredState:
          manifest:
            version: v1beta1
            containers:
            - name: jee-sample
              image: origin-jee-sample
              ports:
              - containerPort: 8080
        labels:
          name: frontend
      replicaSelector:
        name: frontend
      replicas: 1
- kind: Service
  apiVersion: v1beta1
  id: mysql
  containerPort: 3306
  port: 3306
  selector:
    name: database
- kind: DeploymentConfig
  apiVersion: v1beta1
  metadata:
    name: database
  triggers:
  - type: ConfigChange
  template:
    strategy:
      type: Recreate
    controllerTemplate:
      podTemplate:
        desiredState:
          manifest:
            version: v1beta1
            containers:
            - name: jee-database
              image: mysql
              ports:
              - containerPort: 3306
        labels:
          name: database
      replicaSelector:
        name: database
      replicas: 1
- kind: Route
  apiVersion: v1beta1
  metadata:
    name: frontend-route
  host: jee.cloudapps.example.com
  serviceName: frontend
