recipes/7-console-2.0.29-kubernetes.yaml
kind: List
apiVersion: v1beta1
items:
- kind: Service
  apiVersion: v1beta1
  id: fabric8-console-service
  port: 9090
  selector:
    component: console
    provider: fabric8
- kind: ReplicationController
  apiVersion: v1beta1
  id: fabric8-console-controller
  desiredState:
    podTemplate:
      desiredState:
        manifest:
          id: consolePod
          version: v1beta1
          containers:
          - name: fabric8-console-container
            image: fabric8/hawtio-kubernetes
            ports:
            - containerPort: 9090
            - containerPort: 8778
      labels:
        component: console
        provider: fabric8
    replicaSelector:
      component: console
      provider: fabric8
    replicas: 1
  labels:
    component: console
    provider: fabric8
- kind: Route
  apiVersion: v1beta1
  metadata:
    name: fabric8-console-route
  host: console.example.com
  serviceName: fabric8-console-service
